# masks_and_numbers

./: pyproject.toml  test.txt
data/: test.txt
src/: decorators.py  generators.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
